# serializer version: 1
# name: test_camera_entity_setup[camera.test_name_stream_0-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.test_name_stream_0',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stream 0',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stream 0',
    'platform': 'shelly',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'stream',
    'unique_id': '123456789ABC-camera:0-stream_0',
    'unit_of_measurement': None,
  })
# ---
# name: test_camera_entity_setup[camera.test_name_stream_0-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <CameraEntityStateAttribute.BRAND: 'brand'>: 'Shelly',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.test_name_stream_0?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test name Stream 0',
      <CameraEntityStateAttribute.MODEL_NAME: 'model_name'>: 'S1CM-0DXW00',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.test_name_stream_0',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
# name: test_camera_entity_setup[camera.test_name_stream_1-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'camera',
    'entity_category': None,
    'entity_id': 'camera.test_name_stream_1',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Stream 1',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Stream 1',
    'platform': 'shelly',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <CameraEntityFeature: 2>,
    'translation_key': 'stream',
    'unique_id': '123456789ABC-camera:0-stream_1',
    'unit_of_measurement': None,
  })
# ---
# name: test_camera_entity_setup[camera.test_name_stream_1-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <CameraEntityStateAttribute.ACCESS_TOKEN: 'access_token'>: '1caab5c3b3',
      <CameraEntityStateAttribute.BRAND: 'brand'>: 'Shelly',
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/camera_proxy/camera.test_name_stream_1?token=1caab5c3b3',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test name Stream 1',
      <CameraEntityStateAttribute.MODEL_NAME: 'model_name'>: 'S1CM-0DXW00',
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <CameraEntityFeature: 2>,
    }),
    'context': <ANY>,
    'entity_id': 'camera.test_name_stream_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'idle',
  })
# ---
